-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 13
-
Component/s: core-libs
-
b08
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8238849 | 11.0.7 | Brian Burkhalter | P4 | Resolved | Fixed | b03 |
java.base/unix/native/libnet/net_util_md.h declares
89 int NET_Writev(int s, const struct iovec * vector, int count);
but java.base/linux/native/libnet/linux_close.c defines
389 int NET_WriteV(int s, const struct iovec * vector, int count) {
390 BLOCKING_IO_RETURN_INT( s, writev(s, vector, count) );
391 }
Note the capitalization of the "V" in "NET_Writev" versus "NET_WriteV".
Similarly in solaris_close.c aix_close.c, and bsd_close.c
I think the declaration should be changed to match the defintions. Or, if no one uses the function (in either spelling), then it should be removed.
89 int NET_Writev(int s, const struct iovec * vector, int count);
but java.base/linux/native/libnet/linux_close.c defines
389 int NET_WriteV(int s, const struct iovec * vector, int count) {
390 BLOCKING_IO_RETURN_INT( s, writev(s, vector, count) );
391 }
Note the capitalization of the "V" in "NET_Writev" versus "NET_WriteV".
Similarly in solaris_close.c aix_close.c, and bsd_close.c
I think the declaration should be changed to match the defintions. Or, if no one uses the function (in either spelling), then it should be removed.
- backported by
-
JDK-8238849 NET_Writev is declared, NET_WriteV is defined
-
- Resolved
-
- links to