8218882: NET_Writev is declared, NET_WriteV is defined

Reviewed-by: alanb, chegar