src/java.base/macosx/native/libnet/bsd_close.c
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2001, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2001, 2019, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -388,10 +388,6 @@ int NET_RecvFrom(int s, void *buf, int len, unsigned int flags,
 
 int NET_Send(int s, void *msg, int len, unsigned int flags) {
     BLOCKING_IO_RETURN_INT( s, send(s, msg, len, flags) );
-}
-
-int NET_WriteV(int s, const struct iovec * vector, int count) {
-    BLOCKING_IO_RETURN_INT( s, writev(s, vector, count) );
 }
 
 int NET_SendTo(int s, const void *msg, int len,  unsigned  int
